fix: increase visibility of tabs in contrast
affects: @entur/tab

--- a/packages/tab/src/index.scss
+++ b/packages/tab/src/index.scss
@@ -25,7 +25,7 @@
     width: inherit;
     z-index: $z-indexes-behind;
     .eds-contrast & {
-      background-color: $colors-blues-blue30;
+      background-color: $colors-brand-lavender;
     }
   }
 
@@ -85,7 +85,7 @@
     display: block;
     height: $border-widths-default;
     .eds-contrast & {
-      background-color: $colors-blues-blue30;
+      background-color: $colors-brand-lavender;
     }
   }
 
@@ -98,7 +98,7 @@
     .eds-contrast & {
       background-color: $colors-brand-blue;
       color: $colors-brand-white;
-      border-color: $colors-blues-blue30;
+      border-color: $colors-brand-lavender;
     }
 
     &::after {
